# CreativeGen

 CreativeFlow.AIGenerationOrchestrationService/services/aigen-orchestration-service/: .env.example  pyproject.toml
 CreativeFlow.ApiGateway/services/aigen-orchestration-service/: .env.example  pyproject.toml
 CreativeFlow.DeveloperPlatformService/: main.py  pyproject.toml  requirements.txt
 CreativeFlow.DeveloperPlatformService/api/: openapi.yaml
 CreativeFlow.DeveloperPlatformService/src/creativeflow/services/developer_platform/: __init__.py
 CreativeFlow.MLOpsService/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
 CreativeFlow.MLOpsService/src/creativeflow/mlops_service/: __init__.py  database.py  main.py
 CreativeFlow.MLOpsService/src/creativeflow/mlops_service/alembic/: env.py
 CreativeFlow.MLOpsService/src/creativeflow/mlops_service/core/: config.py  security.py
 CreativeFlow.MLOpsService/src/creativeflow/mlops_service/domain/: enums.py
 CreativeFlow.MLOpsService/src/creativeflow/mlops_service/services/: __init__.py  model_deployment_service.py  model_feedback_service.py  model_monitoring_service.py  model_registry_service.py  model_upload_service.py  model_validation_service.py
 CreativeFlow.MLOpsService/src/creativeflow/mlops_service/utils/: __init__.py  exceptions.py
 CreativeFlow.MinIOObjectStorage/: .env.example  Dockerfile  dev-requirements.txt  entrypoint.sh  pyproject.toml  requirements.txt
 CreativeFlow.MinIOObjectStorage/src/creativeflow/mlops_service/: __init__.py  alembic.ini  database.py  main.py
 CreativeFlow.MinIOObjectStorage/src/creativeflow/mlops_service/alembic/: env.py
 CreativeFlow.MinIOObjectStorage/src/creativeflow/mlops_service/core/: config.py  security.py
 CreativeFlow.MinIOObjectStorage/src/creativeflow/mlops_service/domain/: enums.py
 CreativeFlow.MinIOObjectStorage/src/creativeflow/mlops_service/utils/: __init__.py  exceptions.py  logging_config.py
 CreativeFlow.NotificationService/: .env.example  pyproject.toml  requirements.txt
 CreativeFlow.NotificationService/src/creativeflow/services/notification/: config.py  main.py
 CreativeFlow.SharedLibraries.Common/: pyproject.toml
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/: __init__.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/constants/: __init__.py  general.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/dtos/: __init__.py  base_dto.py  error_dto.py  pagination_dto.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/exceptions/: __init__.py  base.py  domain_exceptions.py  infra_exceptions.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/i18n/: __init__.py  formatters.py  utils.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/logging/: __init__.py  config.py  logger.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/security/: __init__.py  sanitization.py  validation.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/testing/: __init__.py  fixtures.py  mocks.py
 CreativeFlow.SharedLibraries.Common/src/creativeflow/shared/utils/: __init__.py  collections.py  decorators.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/: MANIFEST.in  pyproject.toml  setup.cfg
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/: __init__.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/config_management/: __init__.py  loader.py  schemas.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/core/: __init__.py  constants.py  utils.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/datamodels/: __init__.py  base.py  common.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/error_handling/: __init__.py  error_reporter.py  exceptions.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/i18n/: __init__.py  formatting.py  translation.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/logging/: __init__.py  config.py  middleware.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/security/: __init__.py  sanitization.py  validation.py
 CreativeFlow.SharedLibraries/libs/creativeflow-shared/creativeflow_shared/testing_utils/: __init__.py  assertions.py  fixtures.py  mocks.py
 CreativeFlow.SocialPublishingService/: .env.example  alembic.ini  pyproject.toml
 CreativeFlow.SocialPublishingService/src/creativeflow/socialpublishing/: __init__.py  config.py  dependencies.py  main.py
 CreativeFlow.SocialPublishingService/src/creativeflow/socialpublishing/api/: __init__.py
 CreativeFlow.SocialPublishingService/src/creativeflow/socialpublishing/application/: __init__.py  exceptions.py
 CreativeFlow.SocialPublishingService/src/creativeflow/socialpublishing/domain/: __init__.py  exceptions.py
 CreativeFlow.SocialPublishingService/src/creativeflow/socialpublishing/infrastructure/: __init__.py
 CreativeFlow.SubscriptionBillingAdapterService/: .env.example  Dockerfile  gunicorn_conf.py  pyproject.toml  requirements.txt
 CreativeFlow.SubscriptionBillingAdapterService/src/creativeflow/services/subbilling/: __init__.py  dependencies.py  main.py
 CreativeFlow.UserProfileService/: pyproject.toml
 CreativeFlow.UserProfileService/src/creativeflow/services/userprofile/: __init__.py  config.py  logging_config.py  main.py
CreativeFlow.Service.AIGenerationOrchestrator/: Dockerfile  pyproject.toml
CreativeFlow.Service.AIGenerationOrchestrator/src/creativeflow/service/aigeneration_orchestrator/: main.py
CreativeFlow.Service.ApiPlatform/: alembic.ini  pyproject.toml
CreativeFlow.Service.ApiPlatform/src/creativeflow/service/: main.py
CreativeFlow.Service.ApiPlatform/src/creativeflow/service/core/: config.py  security.py
CreativeFlow.Service.Notification/: Dockerfile  pyproject.toml
CreativeFlow.Shared.BackendLibraries/: pyproject.toml
CreativeFlow.Shared.BackendLibraries/src/creativeflow/shared/: __init__.py
(+1759 files in other folders)
