[tool.poetry]
name = "creativeflow-mlops-service"
version = "0.1.0"
description = "Service for managing the ML model lifecycle in the CreativeFlow platform."
authors = ["CreativeFlow Dev Team <dev@creativeflow.ai>"]
readme = "README.md"
packages = [{include = "creativeflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
minio = "^7.2.0"
kubernetes = "^29.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
alembic = "^1.13.1"
python-json-logger = "^2.0.7"
anyio = "^4.3.0" # Required for asyncio.to_thread with older python versions


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
flake8 = "^7.0.0"
black = "^24.2.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]