[tool.poetry]
name = "creativeflow-notification-service"
version = "0.1.0"
description = "CreativeFlow AI Notification Service for real-time updates and push notifications."
authors = ["CreativeFlow AI Team <dev@creativeflow.ai>"]
readme = "README.md"
packages = [{include = "creativeflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "12.0"
pika = "1.3.2"
redis = "5.0.7"
apns2 = "2.5.0"
pyfcm = "1.5.4"
pydantic = "2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"