[tool.poetry]
name = "creativeflow-shared"
version = "0.1.0"
description = "Shared libraries for the CreativeFlow AI platform."
authors = ["CreativeFlow AI Team <dev@creativeflow.ai>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "creativeflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
python-json-logger = "^2.0.7"
bleach = "^6.1.0"
babel = "^2.15.0"
pytz = "*" # Required for babel timezone handling

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
pylint = "^3.0.0"
black = "^24.0.0"
mypy = "^1.0.0"
types-pytz = "*"
types-bleach = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pylint.'MESSAGES CONTROL']
disable = "C0330, C0326, R0903, C0114, C0115, C0116, R0913"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/creativeflow/shared --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true