[tool.poetry]
name = "creativeflow-subbilling-adapter"
version = "1.0.0"
description = "Microservice adapter for subscription and billing orchestration with Odoo."
authors = ["CreativeFlow Engineering <dev@creativeflow.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
odoorpc = "^0.8.0"
stripe = "^9.15.0"
paypalrestsdk = "^1.13.1"
SQLAlchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-psycopg2 = "^2.9.21.20240507"
types-requests = "^2.31.0.20240406"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"