[tool.poetry]
name = "creativeflow-service-notification"
version = "0.1.0"
description = "Notification service for the CreativeFlow AI platform."
authors = ["CreativeFlow Engineering <dev@creativeflow.ai>"]
readme = "README.md"
packages = [{include = "creativeflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
websockets = "^12.0"
aio-pika = "^9.4.1"
apns2 = "^2.2.0"
firebase-admin = "^6.5.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn creativeflow.service.notification.main:app --host 0.0.0.0 --port 8000"