[tool.poetry]
name = "aigen-orchestration-service"
version = "0.1.0"
description = "CreativeFlow AI Generation Orchestration Service"
authors = ["CreativeFlow Dev Team <dev@creativeflow.io>"]
readme = "README.md"
packages = [{include = "creativeflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email", "dotenv"], version = "^2.7.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
pika = "^1.3.2"
httpx = "^0.27.0"
python-json-logger = "^2.0.7"
alembic = "^1.13.1"
odoorpc = "^0.8.0"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
httpx-mock = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"