[tool.poetry]
name = "creativeflow-aigen-orchestration-service"
version = "0.1.0"
description = "CreativeFlow AI Generation Orchestration Service"
authors = ["CreativeFlow Engineering <dev@creativeflow.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.13"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
pika = "^1.3.2"
httpx = "^0.25.1"
python-json-logger = "^2.0.7"
# For Odoo Client, if used
# odoorpc = "^0.8.0" 

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
alembic = "^1.12.1" # For database migrations

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"